# defect-detection-qc

./: .dockerignore  .gitignore  Dockerfile  MODEL_CARD.md  README.md  app.py  conftest.py  pyproject.toml  requirements-deploy.txt  requirements.txt
.github/workflows/: ci.yml
configs/: defect_detection.example.yaml
data/neu_det/: data.yaml
data/neu_det/labels/: train.cache  val.cache
scripts/: make_figures.py  make_sample.py  prepare_neu.py  prepare_neu_det.py  yolo_infer.py  yolo_train.py
src/qc/: __init__.py  anomaly.py  calibrate.py  convert.py  data.py  evaluate.py  explain.py  export.py  losses.py  model.py  roi.py  train.py  utils.py  yolo_onnx.py
tests/: test_convert.py  test_losses.py  test_metrics.py  test_utils.py
