[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-quality-control"
version = "0.1.0"
description = "Computer-vision pipeline for manufacturing defect QC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pillow>=10",
    "opencv-python>=4.9",
    "tqdm>=4.66",
    "pyyaml>=6",
    "onnx>=1.16",
    "onnxruntime>=1.17",
    "ultralytics>=8.1",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
